--- a/movies/templates/header_movies_control.html
+++ b/movies/templates/header_movies_control.html
@@ -24,12 +24,11 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="actor1-filter" class="col-sm-2 control-label">Actor</label>
-							<div class="col-sm-4">
+							<label for="actor1-filter" class="col-sm-2 control-label">Actors</label>
+							<div class="col-sm-5">
 								<input type="text" class="form-control" id="actor1-filter">
 							</div>
-							<label for="actor2-filter" class="col-sm-2 control-label">Actor +</label>
-							<div class="col-sm-4">
+							<div class="col-sm-5">
 								<input type="text" class="form-control" id="actor2-filter">
 							</div>
 						</div>
