--- a/movies/scss/index.scss
+++ b/movies/scss/index.scss
@@ -1,16 +1,6 @@
 $bg_color_inverse:#111;
 $fg_color_inverse:#fff; 
 
-body{
-    padding: 0px;
-    margin: 0px;
-}
-
-body.inverse-body{
-    background: $bg_color_inverse;
-    color: $fg_color_inverse;
-}
-
 caption{
 	font-size: 24px;
 	margin: 12px;	
@@ -40,31 +30,31 @@ a.a-no-decor{
 	color: black;
 }
 
+body#index_html{
+	background: #eee;
+	padding-top: 4em;
 
-#index_html{
-	background: #777;//black;
-
-	.row {
-		margin-top: 96px;
+	#djmovies-title{
+	  font-family: "Courier New", Courier, monospace;
+	  font-size: 1.6em;
+	  margin: 0.6em;
+	  text-align: right;
 	}
 
-	a.main-icon-ref {
-		text-decoration: none;
-		border-radius: 24px;
-		img{
-			width: 100%;
-			height:100%;
-		}
+	.even-row {
+		background: rgba(201,201,201,.15);
+		padding: 6px 0px;
 	}
 
-	a.main-icon-ref:hover {
-		background: #22b;
+	.odd-row {
+		background: rgba(255,255,255,.3);
+		padding: 6px 0px;
 	}
-
 }
 
 @import "buttons";
 @import "menu";
+@import "spinner-wait";
 @import "movies";
 @import "locations";
 @import "dialog_imdb";
