--- a/movies/templates/generic.html
+++ b/movies/templates/generic.html
@@ -5,7 +5,6 @@
     <link href="/static/bootstrap-3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/messenger/css/messenger.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/messenger/css/messenger-theme-future.css" rel="stylesheet" media="screen" type='text/css'>
-    <link href="/static/spinner-wait.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/sweet-alert.css" rel="stylesheet" media="screen" type='text/css'>
     <link href="/static/movies.css" rel="stylesheet" media="screen" type='text/css'>
   </head>
@@ -23,25 +22,25 @@
     <script src="/static/jquery.cookie.js" type="text/javascript"></script>
     <script src="/static/jquery.timeago.js" type="text/javascript"></script>
     <script src="/static/json2.js" type="text/javascript"></script>
+    <script src="/static/sweet-alert.min.js" type="text/javascript"></script>
     <script src="/static/bootstrap-3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/static/messenger/js/messenger.min.js" type="text/javascript"></script>
     <script src="/static/messenger/js/messenger-theme-future.js" type="text/javascript"></script>
-    <script src="/static/spinner-wait.js" type="text/javascript"></script>
-    <script src="/static/sweet-alert.min.js" type="text/javascript"></script>
-    <script src="/static/movie_edition.js" type="text/javascript"></script>
-    <script src="/static/locations.js" type="text/javascript"></script>
-    <script src="/static/locations_sync.js" type="text/javascript"></script>
-    <script src="/static/dialog_imdb.js" type="text/javascript"></script>
-    <script src="/static/dialog_confirm.js" type="text/javascript"></script>
-    <script src="/static/movies_control.js" type="text/javascript"></script>
-    <script src="/static/dialog_imdb_choice.js" type="text/javascript"></script>
-    <script src="/static/index.js" type="text/javascript"></script>
-    <script src="/static/subtitles_handling.js" type="text/javascript"></script>
-    <script src="/static/imdb_search.js" type="text/javascript"></script>
-    <script src="/static/uquery.js" type="text/javascript"></script>
-    <script src="/static/uquery-results.js" type="text/javascript"></script>
-    <script src="/static/ajax.js" type="text/javascript"></script>
-    <script src="/static/global.js" type="text/javascript"></script>
+    <script src="/static/js/spinner-wait.js" type="text/javascript"></script>
+    <script src="/static/js/movie_edition.js" type="text/javascript"></script>
+    <script src="/static/js/locations.js" type="text/javascript"></script>
+    <script src="/static/js/locations_sync.js" type="text/javascript"></script>
+    <script src="/static/js/dialog_imdb.js" type="text/javascript"></script>
+    <script src="/static/js/dialog_confirm.js" type="text/javascript"></script>
+    <script src="/static/js/movies_control.js" type="text/javascript"></script>
+    <script src="/static/js/dialog_imdb_choice.js" type="text/javascript"></script>
+    <script src="/static/js/index.js" type="text/javascript"></script>
+    <script src="/static/js/subtitles_handling.js" type="text/javascript"></script>
+    <script src="/static/js/imdb_search.js" type="text/javascript"></script>
+    <script src="/static/js/uquery.js" type="text/javascript"></script>
+    <script src="/static/js/uquery-results.js" type="text/javascript"></script>
+    <script src="/static/js/ajax.js" type="text/javascript"></script>
+    <script src="/static/js/global.js" type="text/javascript"></script>
     {% if messages %}
     <script>
     {% for message in messages %}
