--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -6,22 +6,50 @@
 {% include "dialog_imdb_choice.html" %}
 
 <div class='container'>
-	<div class='row'>
-		<a id='icon_movies' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5' href='/movies'>
-			<img src='/static/icon_movies.png'>
-		</a>
-		<a id='icon_locations' href='/locations' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2'>
-			<img src='/static/icon_locations.png'>
-		</a>
+	<div class='row' id='djmovies-title'>
+		DJMovies by coderazzi
 	</div>
-	<div class='row'>
-		<a id='icon_imdb' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5'>
-			<img src='/static/icon_imdb.png' >
-		</a>
-		<a id='icon_uquery' href='/uquery' class='main-icon-ref col-xs-5 col-sm-5 col-md-5 col-lg-5 col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2'>
-			<img src='/static/icon_uquery.png'>
-		</a>
-	</div>
+    <a class='a-no-decor' href='/movies'>
+    	<div class='row odd-row '>
+	        <div class='col-sm-1'>
+	            <img src='/static/control.png' class='header-main-icon'>
+	        </div>
+	        <div class='col-sm-5 header-typo'>
+	            Movies control
+	        </div>
+        </div>
+    </a>
+    <a class='a-no-decor prepend-top' href='/locations'>
+	    <div class='row a-no-decor even-row'>
+	        <div class='col-sm-1 col-sm-offset-5'>
+	            <img src='/static/locations.png' class='header-main-icon'>
+	        </div>
+	        <div class='col-sm-5 header-typo'>
+	            Locations
+	        </div>
+	    </div>
+    </a>
+    <a class='prepend-top a-no-decor' href='/uquery'>
+    	<div class='row odd-row '>
+	        <div class='col-sm-1 col-sm-offset-2'>
+	            <img src='/static/uquery.png' class='header-main-icon'>
+	        </div>
+	        <div class='col-sm-5 header-typo'>
+	            UQuery
+	        </div>
+        </div>
+    </a>
+    <a class='a-no-decor prepend-top' href='#' id='imdb_search'>
+	    <div class='row even-row'>
+	        <div class='col-sm-1 col-sm-offset-6'>
+	            <img src='/static/imdb.png' class='header-main-icon'>
+	        </div>
+	        <div class='col-sm-5 header-typo'>
+	            Imdb search
+	        </div>
+        </div>
+    </a>
 </div>
+
 {% endblock %}
 
