--- a/movies/scss/index.scss
+++ b/movies/scss/index.scss
@@ -52,6 +52,29 @@ body#index_html{
 	}
 }
 
+#collage {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	background: black;
+	opacity: .9;
+	z-index: -1;
+	img {
+		z-index:-2;
+		position: absolute;
+	}
+	overflow: hidden;
+}
+
+.overcollage {
+	background: #eee;
+	padding-bottom: 4em;
+	border: 4px solid #777;
+	border-radius: 36px;
+}
+
 @import "buttons";
 @import "menu";
 @import "spinner-wait";
