--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -36,6 +36,26 @@ body#index_html {
     background: rgba(255, 255, 255, 0.3);
     padding: 6px 0px; }
 
+#collage {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: .9;
+  z-index: -1;
+  overflow: hidden; }
+  #collage img {
+    z-index: -2;
+    position: absolute; }
+
+.overcollage {
+  background: #eee;
+  padding-bottom: 4em;
+  border: 4px solid #777;
+  border-radius: 36px; }
+
 .btn-color-red {
   background-color: #a32929 !important;
   background-repeat: repeat-x;
@@ -96,8 +116,8 @@ body#index_html {
   padding: 10px 20px;
   background: black;
   background: rgba(0, 0, 0, 0.5);
-  border-bottom: 1px solid #333344;
-  box-shadow: 0 0px 2px 2px #666699; }
+  border-bottom: 1px solid #334;
+  box-shadow: 0 0px 2px 2px #669; }
 
 .menu-item {
   display: inline-block;
@@ -105,12 +125,12 @@ body#index_html {
   padding: 10px;
   background: black;
   border-radius: 6px;
-  color: #333344;
-  box-shadow: 0 0px 2px 2px #333344; }
+  color: #334;
+  box-shadow: 0 0px 2px 2px #334; }
 
 .menu-item-enabled {
-  color: #666699;
-  box-shadow: 0 0px 2px 2px #666699;
+  color: #669;
+  box-shadow: 0 0px 2px 2px #669;
   cursor: pointer; }
 
 /*********  >> spinner [part from https://github.com/tobiasahlin/SpinKit -see spinners/2-double-bounce ]************/
@@ -158,20 +178,16 @@ body#index_html {
   0%, 100% {
     -webkit-transform: scale(0);
     transform: scale(0); }
-
   50% {
     -webkit-transform: scale(1);
     transform: scale(1); } }
-
 @keyframes sk-doubleBounce {
   0%, 100% {
     -webkit-transform: scale(0);
     transform: scale(0); }
-
   50% {
     -webkit-transform: scale(1);
     transform: scale(1); } }
-
 /*********  << spinner ************/
 .div_movie {
   float: left; }
@@ -234,7 +250,7 @@ body#index_html {
 .movie_info_item a:active,
 .movie_info_item a:hover,
 .movie_info_item a:link {
-  color: white; }
+  color: #fff; }
 
 #locations {
   width: 50%;
@@ -388,7 +404,6 @@ body#index_html {
 @font-face {
   font-family: 'Poiret One';
   src: url("/static/PoiretOne-Regular.ttf"); }
-
 .header-typo {
   font-family: 'Poiret One', cursive;
   font-weight: bold;
@@ -527,15 +542,13 @@ select#size-filter {
 @keyframes spin {
   from {
     transform: scale(1) rotate(0deg); }
-
   to {
     transform: scale(1) rotate(360deg); } }
-
 @-webkit-keyframes spin2 {
   from {
     -webkit-transform: rotate(0deg); }
-
   to {
     -webkit-transform: rotate(360deg); } }
-
 /*********  << spinner on glypicon ************/
+
+/*# sourceMappingURL=movies.css.map */
