--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -5,7 +5,7 @@
 
 {% include "dialog_imdb_choice.html" %}
 
-<div class='container'>
+<div class='container overcollage'>
 	<div class='row' id='djmovies-title'>
 		DJMovies by coderazzi
 	</div>
