--- a/movies/static/movies.css
+++ b/movies/static/movies.css
@@ -22,7 +22,7 @@ a.a-no-decor {
   color: black; }
 
 body#index_html {
-  background: #eee;
+  background: white;
   padding-top: 4em; }
   body#index_html #djmovies-title {
     font-family: "Courier New", Courier, monospace;
@@ -53,8 +53,8 @@ body#index_html {
 .overcollage {
   background: #eee;
   padding-bottom: 4em;
-  border: 4px solid #777;
-  border-radius: 36px; }
+  border: 64px solid white;
+  border-radius: 32px; }
 
 .btn-color-red {
   background-color: #a32929 !important;
