--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -29,7 +29,7 @@
 	    <a class='a-no-decor prepend-top' href='/locations'>
 		    <div class='row a-no-decor even-row'>
 		        <div class='col-xs-2 col-sm-2 col-md-1 col-xs-offset-5 col-sm-offset-5 col-md-offset-5'>
-		            <img src='/static/locations.png' class='header-main-icon'>
+		            <img src='/static/locations-light.png' class='header-main-icon'>
 		        </div>
 		        <div class='col-xs-5 col-sm-5 col-md-6 header-typo'>
 		            Locations
