--- a/movies/scss/index.scss
+++ b/movies/scss/index.scss
@@ -27,7 +27,7 @@ caption{
 
 a.a-no-decor{
 	text-decoration: none;
-	color: black;
+	color: white;
 }
 
 body#index_html{
@@ -42,14 +42,24 @@ body#index_html{
 	  text-align: right;
 	}
 
+	.full-row {
+		width: 100%;
+		margin-top: 2em;
+		background: rgba(0,0,0,.85);
+		.container {
+			color: white;
+			border-radius: 2.5em;
+			background: rgba(0, 0, 0, .4); 
+			padding: 2em 1em;
+		}
+	}
+
 	.even-row {
-		background: rgba(201,201,201,.15);
-		padding: 6px 0px;
+		background: rgba(0, 0, 0, .2); 
 	}
 
 	.odd-row {
-		background: rgba(255,255,255,.3);
-		padding: 6px 0px;
+		background: rgba(0, 0, 0, .8); 
 	}
 }
 
@@ -67,25 +77,6 @@ body#index_html{
 		position: absolute;
 	}
 	overflow: hidden;
-}
-
-.overcollage {
-	background: #eee;
-	padding-bottom: 4em;
-	border: 64px solid white;
-
-	border-radius: 32px;
-}
-
-.full-row {
-	width: 100%;
-	margin-top: 3em;
-	background: rgba(255,255,255,.85);
-	.container {
-		background: rgba(255,255,255,.9); 
-		padding: 1em 1em;
-		//border-radius: 2em;
-	}
 }
 
 @import "buttons";
