--- a/movies/templates/imdb_year_search.html
+++ b/movies/templates/imdb_year_search.html
@@ -27,7 +27,7 @@
 			<td>
 				<a href='{% uquery_search search %}' target='_uquery' class='a-no-decor'>
 					<img src='/static/uquery-xs.png'>
-					<b>{{title}}</b>
+					<b class='imdb-title'>{{title}}</b>
 				</a>				
 				<br>{{credit}}
 				<br>{{genres}}
