--- a/movies/templates/uquery_results_content.html
+++ b/movies/templates/uquery_results_content.html
@@ -32,12 +32,18 @@
             </div>
             <div class='row'>
                 <div class='col-sm-3 col-sm-offset-1'>
-                    <form action="https://www.binsearch.info/fcgi/nzb.fcgi?q={% urllib_quote query.title %}" method="post" name="r">    
-                        <input name="action" type="hidden" value="nzb"/>
-                        <input name="b" type="hidden" value="1"/>
-                        <input name="{{each.oid}}" type='hidden' value='1'/>
-                        <input class="b btn btn-control btn-download" type="submit" value="Download"/>
-                    </form>
+                    {% if each.download %}
+                        <form action="{{each.download}}">
+                            <input class="b btn btn-control btn-download" type="submit" value="Download"/>
+                        </form>
+                    {% else %}
+                        <form action="https://www.binsearch.info/fcgi/nzb.fcgi?q={% urllib_quote query.title %}" method="post" name="r">
+                            <input name="action" type="hidden" value="nzb"/>
+                            <input name="b" type="hidden" value="1"/>
+                            <input name="{{each.oid}}" type='hidden' value='1'/>
+                            <input class="b btn btn-control btn-download" type="submit" value="Download"/>
+                        </form>
+                    {% endif %}
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" class="result-status"> Bad download
