--- a/movies/templates/locations_sync_movie.html
+++ b/movies/templates/locations_sync_movie.html
@@ -6,7 +6,7 @@
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             </a>
             {% else %}
-            <a type="button" class="btn btn-xs btn-color-red remove-movie" href='#'>
+            <a type="button" class="btn btn-xs btn-color-red remove-movie" href='#' name='movie_{{movie.id}}'>
                 <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
             </a>
             {% endif %}
